--- a/todo
+++ b/todo
@@ -12,3 +12,10 @@
 
 
 - allows to use directly gym wrappers just implemented in the library
+
+
+export DISPLAY=':99.0'
+Xvfb :99 -screen 0 1400x900x24 > /dev/null 2>&1 &
+
+
+# headless
